kafka consumer, elastic for query responsibility added and docker compose changed